src/ControlNode/deploy-controlnode.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controlnode
  namespace: distributed-system-dev-ns
  labels:
    app: controlnode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controlnode
  strategy: {}
  template:
    metadata:
      labels:
        app: controlnode
    spec:
      containers:
        - name: controlnode-container
          image: matfmastercr.azurecr.io/controlnode:v0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: controlnode
  namespace: distributed-system-dev-ns
  labels:
    app: controlnode
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: 80-80
    protocol: TCP
    targetPort: 80
  selector:
    app: controlnode
  internalTrafficPolicy: Local
