src/ControlNode/deploy-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: distributed-system-dev-ns
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: matfmastercr.azurecr.io/frontend:v5.7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: distributed-system-dev-ns
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: 80-80
    protocol: TCP
    targetPort: 80
  - port: 443
    name: 443-443
    protocol: TCP
    targetPort: 443
  selector:
    app: frontend
