src/ControlNode/controlnode-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cn-tls
  namespace: distributed-system-dev-ns
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - matf-distr-comp-sys.westeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: matf-distr-comp-sys.westeurope.cloudapp.azure.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: controlnode
            port:
              number: 80
